<resources>
    <string name="app_name">Munchies</string>
    <string name="title_activity_feed_me">Munchies</string>
    <string name="title_activity_feed_me_map">Map</string>
    <string name="jj"> Name: Taco Bell \n Food Type: Mexican Fast Food \n Hours: 7AM-5AM \n Price Point: $</string>
    <string name="title_activity_maps">Food Nearby</string>
    <string name="title_activity_find_food">Map</string>
    <string name="find_me_food">Find Me Food</string>
    <string name="meal_planner">Meal Planner</string>
    <string name="saved_meals">Saved Meals</string>
    <string name="textview">TextView</string>
    <string name="am">AM</string>
    <string name="pm">PM</string>
    <string name="submit">Submit</string>
    <string name="date">Date:</string>
    <string name="hh_mm">HH:MM</string>
    <string name="mm_dd_yyyy">MM/DD/YYYY</string>
    <string name="plan_a_meal">Plan A Meal</string>
    <string name="restaurant_city_state_zip">Restaurant City, State ZIP</string>
    <string name="restaurant_street_address">Restaurant Street Address</string>
    <string name="time">Time:</string>
    <string name="addr">Addr</string>
    <string name="addr2">Addr2</string>
    <string name="date1">Date</string>
    <string name="name1">Name</string>
    <string name="time1">Time</string>
</resources>
